--- a/meeee/index.html
+++ b/meeee/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 	<meta>
-	<title>Amanda's Webpage</title>
+	<title>Fred's Webpage</title>
 </head>
 <body>
-   <h1>Amanda Cheung</h1>
+   <h1>Fred Almeida</h1>
    <img src="https://secure.gravatar.com/avatar/74dd54d66b23dae98c1509165033af14?size=300" alt="Amanda’s avatar">
-   <h2>[My year and major]</h2>
-   <p>[My goals for the semester]</p>
+   <h2>[Junior-Graphic Design]</h2>
+   <p>[Get as many internships as possible.]</p>
 </body>
 </html>
