--- a/meeee/index.html
+++ b/meeee/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
    <h1>Fred Almeida</h1>
-   <img src="https://secure.gravatar.com/avatar/74dd54d66b23dae98c1509165033af14?size=300" alt="Amanda’s avatar">
+   <img src="https://www.facebook.com/photo.php?fbid=632642593521630&set=a.100219350097293.62.100003276840280&type=3&theater">
    <h2>[Junior-Graphic Design]</h2>
    <p>[Get as many internships as possible.]</p>
 </body>
