--- a/homework/index.html
+++ b/homework/index.html
@@ -9,9 +9,9 @@
 	<section id='content'>
 		<h1>Fred Almeida's Homework</h1>
 		<h2>Me</h2>
-				<p><a href='../meeee/index.html'>Added Link</a></p>
+				<p><a href="../meeee/index.html">Added Link</a></p>
 		<h2>Blog post</h2>
-				<p><a href='..blog-post/index.html'>Topic: What are design sprints? Who do they benefit and how?</a></p>
+				<p><a href="..blog-post/index.html">Topic: What are design sprints? Who do they benefit and how?</a></p>
 		<h2>Dobot shop</h2>
 				<p>Add your link(s) Here</p>
 		<h2>Blog site</h2>
