--- a/blog-post/index.html
+++ b/blog-post/index.html
@@ -1,2 +1,2 @@
-<header>What are design sprints? Who do they benefit and how?</header>
+<h1>What are design sprints? Who do they benefit and how?</h1>
   <p>Response to design sprints question...</p>
