--- a/blog-post/index.html
+++ b/blog-post/index.html
@@ -1,2 +1,2 @@
 <h1>What are design sprints? Who do they benefit and how?</h1>
-  <p>Response to design sprints question...</p>
+  <p>Design sprints are a framework for teams of any size to solve and test design problems in 2-5 days. Working together with companies in a sprint, we shortcut the usual endless-debate cycle and compress months of time into a single week. Instead of waiting to launch a minimal product to understand if an idea is any good, teams get great data from a prototype. The sprint gives these companies a superpower: The ability to build and test nearly any idea in just 40 hours.</p>
