--- a/dobot/index.html
+++ b/dobot/index.html
@@ -1,24 +1,24 @@
 <h2> DOBOT </h2>
 <h1>2012 Monster Calender</h1>
 <h4>6x6 Screen Print Calender</h4>
-<img>[monster calender image]</img>
-<h4> This is something I wrote to fill space, but would actually mean something very important to this piece of art we are currently trying to sell. Still just trying to fill space here so that it seems to look like an actual post rather than some made up thing.</h4>
-<h4>Guess what. I'm still just trying to fill space here. This paragraph is to look like someone was writing a lot and had to take it into another paragraph, but it's actually just some sort of BS so that we can fill more space.</h4>
+	<img>[monster calender image]</img>
+		<p> This is something I wrote to fill space, but would actually mean something very important to this piece of art we are currently trying to sell. Still just trying to fill space here so that it seems to look like an actual post rather than some made up thing.</p>
+		<p>Guess what. I'm still just trying to fill space here. This paragraph is to look like someone was writing a lot and had to take it into another paragraph, but it's actually just some sort of BS so that we can fill more space.</p>
 <h4><a href="">Check out how it was made></a></h4>
 <h3>$20<a href=""> BUY THIS</a></h3>
 
 <h1>An Anchored Heart</h1>
 <h4>11x14 Framed Digital Print</h4>
-<img>[an anchored heart image]</img>
-<h4> This is something I wrote to fill space, but would actually mean something very important to this piece of art we are currently trying to sell. Still just trying to fill space here so that it seems to look like an actual post rather than some made up thing.</h4>
-<h4>Guess what. I'm still just trying to fill space here. This paragraph is to look like someone was writing a lot and had to take it into another paragraph, but it's actually just some sort of BS so that we can fill more space.</h4>
+	<img>[an anchored heart image]</img>
+		<p> This is something I wrote to fill space, but would actually mean something very important to this piece of art we are currently trying to sell. Still just trying to fill space here so that it seems to look like an actual post rather than some made up thing.</p>
+		<p>Guess what. I'm still just trying to fill space here. This paragraph is to look like someone was writing a lot and had to take it into another paragraph, but it's actually just some sort of BS so that we can fill more space.</p>
 <h4><a href="">Check out how it was made></a></h4>
 <h3>$30<a href=""> BUY THIS</a></h3>
 
 <h1>Buy Film</h1>
 <h4>4x4 Vinyl Stickers</h4>
-<img>[buy film image]</img>
-<h4> This is something I wrote to fill space, but would actually mean something very important to this piece of art we are currently trying to sell. Still just trying to fill space here so that it seems to look like an actual post rather than some made up thing.</h4>
-<h4>Guess what. I'm still just trying to fill space here. This paragraph is to look like someone was writing a lot and had to take it into another paragraph, but it's actually just some sort of BS so that we can fill more space.</h4>
+	<img>[buy film image]</img>
+		<p> This is something I wrote to fill space, but would actually mean something very important to this piece of art we are currently trying to sell. Still just trying to fill space here so that it seems to look like an actual post rather than some made up thing.</p>
+		<p>Guess what. I'm still just trying to fill space here. This paragraph is to look like someone was writing a lot and had to take it into another paragraph, but it's actually just some sort of BS so that we can fill more space.</p>
 <h4><a href="">Check out how it was made></a></h4>
 <h3>$10<a href=""> BUY THIS</a></h3>
