--- a/dobot/index.html
+++ b/dobot/index.html
@@ -1,4 +1,11 @@
-<h2> DOBOT </h2>
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>DOBOT</title>
+		<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+	<h2> DOBOT </h2>
 <h1>2012 Monster Calender</h1>
 <h4>6x6 Screen Print Calender</h4>
 	<img>[monster calender image]</img>
@@ -22,3 +29,5 @@
 		<p>Guess what. I'm still just trying to fill space here. This paragraph is to look like someone was writing a lot and had to take it into another paragraph, but it's actually just some sort of BS so that we can fill more space.</p>
 <h4><a href="">Check out how it was made></a></h4>
 <h3>$10<a href=""> BUY THIS</a></h3>
+</body>
+</html>
