--- a/dobot/index.html
+++ b/dobot/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="UTF-8">
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 
@@ -18,7 +19,7 @@
   <h3>6x6 Screen Print Calender</h3>
 		<p> This is something I wrote to fill space, but would actually mean something very important to this piece of art we are currently trying to sell. Still just trying to fill space here so that it seems to look like an actual post rather than some made up thing.</p>
 		<p>Guess what. I'm still just trying to fill space here. This paragraph is to look like someone was writing a lot and had to take it into another paragraph, but it's actually just some sort of BS so that we can fill more space.</p>
-  <h4><a class="made" href="">Check out how it was made ></a></h4>
+  <h4><a class="made" href="">Check out how it was made → </a></h4>
   <h2>$20<button type="button">BUY THIS</button></h2>
 	</div>
 		<img src="monster calender.jpg" height="800" width="575">
@@ -31,7 +32,7 @@
   <h3>11x14 Framed Digital Print</h3>
 		<p> This is something I wrote to fill space, but would actually mean something very important to this piece of art we are currently trying to sell. Still just trying to fill space here so that it seems to look like an actual post rather than some made up thing.</p>
 		<p>Guess what. I'm still just trying to fill space here. This paragraph is to look like someone was writing a lot and had to take it into another paragraph, but it's actually just some sort of BS so that we can fill more space.</p>
-  <h4><a class="made" href="">Check out how it was made ></a></h4>
+  <h4><a class="made" href="">Check out how it was made → </a></h4>
   <h2>$20<button type="button">BUY THIS</button></h2>
 	</div>
 		<img class="anchor" src="anchored.jpg">
@@ -44,7 +45,7 @@
   <h3>4x4 Vinyl Stickers</h3>
 		<p> This is something I wrote to fill space, but would actually mean something very important to this piece of art we are currently trying to sell. Still just trying to fill space here so that it seems to look like an actual post rather than some made up thing.</p>
 		<p>Guess what. I'm still just trying to fill space here. This paragraph is to look like someone was writing a lot and had to take it into another paragraph, but it's actually just some sort of BS so that we can fill more space.</p>
-  <h4><a class="made" href="">Check out how it was made ></a></h4Ω>
+  <h4><a class="made" href="">Check out how it was made → </a></h4Ω>
   <h2>$20<button type="button">BUY THIS</button></h2>
 	</div>
 		<img class="film" src="buy film.jpg">
