--- a/homework/index.html
+++ b/homework/index.html
@@ -13,7 +13,7 @@
 		<h2>Blog post</h2>
 				<p><a href="../blog-post/index.html">Topic: What are design sprints? Who do they benefit and how?</a></p>
 		<h2>Dobot shop</h2>
-				<p><a href="../dobot/index.html">Click for Dobot Page Chop</p>
+				<p><a href="../dobot/index.html">Click for Dobot Page</p>
 		<h2>Blog site</h2>
 				<p>Add your link(s) Here</p>
 		<h2>Poster League</h2>
