--- a/dobot/index.html
+++ b/dobot/index.html
@@ -22,7 +22,7 @@
   <h4><a class="made" href="">Check out how it was made → </a></h4>
   <h2>$20<button type="button">BUY THIS</button></h2>
 	</div>
-		<img src="monster calender.jpg" height="800" width="575">
+		<img class="monster" src="monster calender.jpg">
 
 </section>	
 
