--- a/dobot/index.html
+++ b/dobot/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-us">
 	<head>
+		<title>Dobot</title>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 
-<div id="page-wrap">
-
 	<body>
+		<div id="page-wrap">
 
 <header>
 	<img class="logo" src="dobot logo.png">
@@ -20,7 +20,7 @@
 		<p> This is something I wrote to fill space, but would actually mean something very important to this piece of art we are currently trying to sell. Still just trying to fill space here so that it seems to look like an actual post rather than some made up thing.</p>
 		<p>Guess what. I'm still just trying to fill space here. This paragraph is to look like someone was writing a lot and had to take it into another paragraph, but it's actually just some sort of BS so that we can fill more space.</p>
   <h4><a class="made" href="">Check out how it was made → </a></h4>
-  <h2>$20<button type="button">BUY THIS</button></h2>
+  <h2>$20<button type="button">Buy this</button></h2>
 	</div>
 		<img class="monster" src="monster calender.jpg">
 
@@ -33,7 +33,7 @@
 		<p> This is something I wrote to fill space, but would actually mean something very important to this piece of art we are currently trying to sell. Still just trying to fill space here so that it seems to look like an actual post rather than some made up thing.</p>
 		<p>Guess what. I'm still just trying to fill space here. This paragraph is to look like someone was writing a lot and had to take it into another paragraph, but it's actually just some sort of BS so that we can fill more space.</p>
   <h4><a class="made" href="">Check out how it was made → </a></h4>
-  <h2>$20<button type="button">BUY THIS</button></h2>
+  <h2>$20<button type="button">Buy this</button></h2>
 	</div>
 		<img class="anchor" src="anchored.jpg">
 
@@ -46,14 +46,14 @@
 		<p> This is something I wrote to fill space, but would actually mean something very important to this piece of art we are currently trying to sell. Still just trying to fill space here so that it seems to look like an actual post rather than some made up thing.</p>
 		<p>Guess what. I'm still just trying to fill space here. This paragraph is to look like someone was writing a lot and had to take it into another paragraph, but it's actually just some sort of BS so that we can fill more space.</p>
   <h4><a class="made" href="">Check out how it was made → </a></h4Ω>
-  <h2>$20<button type="button">BUY THIS</button></h2>
+  <h2>$20<button type="button">Buy this</button></h2>
 	</div>
 		<img class="film" src="buy film.jpg">
 
 </section>
-
+</div>
 	</body>
 
-</div>
+
 
 </html>
