--- a/final/about.html
+++ b/final/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
 	<head>
-		<title>Fred Almeida Design-About</title>
+		<title>Fred Almeida Design | About</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	
@@ -9,18 +9,20 @@
 <header>
 <h1 class="logo mainlogo">Fred Almeida Design</h1>
 <nav>
-	<a href="projects.html" class="navlink">Projects</a>
-	<a href="about.html" class="navlink">About</a>
+	<a href="projects.html" class="navlink">Projects   |</a>
+	<a href="about.html" class="navlink">About   |</a>
 	<a href="contact.html" class="navlink">Contact</a>
 </nav>
 </header>
 
 	<img class="me" src="me.jpg">
-<h2>Fred Almeida</h2>
+	<div class="AboutMe">
+<h4>Fred Almeida</h4>
 <h3>Massachusetts College of Art & Design</h3>
 <h3>Boston, MA / Providence, RI</h3>
 <h4>About Me</h4>
-<h5>I am currently residing in Boston as a student graphic designer, in my third year at Massart. It is my second year in the Graphic Design Program and I'm really enjoying my time in it. My particular interests in graphic design are illustration, logo design, calligraphy, and package design.</h5>
+<p>I am currently residing in Boston as a student graphic designer, in my third year at Massart. It is my second year in the Graphic Design Program and I'm really enjoying my time in it. My particular interests in graphic design are illustration, logo design, calligraphy, and package design.</p>
+	</div>
 	</body>
 
 
