--- a/final/projects.html
+++ b/final/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
 	<head>
-		<title>Fred Almeida Design-Projects</title>
+		<title>Fred Almeida Design | Projects</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	
@@ -9,16 +9,20 @@
 <header>
 <h1 class="logo mainlogo">Fred Almeida Design</h1>
 <nav>
-	<a href="projects.html" class="navlink">Projects</a>
-	<a href="about.html" class="navlink">About</a>
+	<a href="projects.html" class="navlink">Projects   |</a>
+	<a href="about.html" class="navlink">About   |</a>
 	<a href="contact.html" class="navlink">Contact</a>
 </nav>
 </header>
 <h2>Projects</h2>
 
-	<img class="kasitalogo" src="kasita logo.jpg">
-	<img class="dreamcover" src="dream book cover.jpg">
-	<img class="harvardsquare" src="harvard square.jpg"
+<div class='projects'>
+	<a href="kasita.html" class="project"><img src="kasita-logo.jpg"></a>
+	<a href="dreambook.html" class="project"><img src="dream-book-cover.jpg"></a>
+	<a href="harvardsquare.html" class="project"><img src="harvard-square.jpg"></a>
+	<a href="artperspective.html" class="project"><img src="artperspective.jpg"></a>
+	<a href="100songs.html" class="project"><img src="100songs.jpg"></a>
+	<a href="map.html" class="project"><img src="map.jpg"></a></div>
 
 	</body>
 
