--- a/final/contact.html
+++ b/final/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
 	<head>
-		<title>Fred Almeida Design-Contact</title>
+		<title>Fred Almeida Design | Contact</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	
@@ -9,8 +9,8 @@
 <header>
 <h1 class="logo mainlogo">Fred Almeida Design</h1>
 <nav>
-	<a href="projects.html" class="navlink">Projects</a>
-	<a href="about.html" class="navlink">About</a>
+	<a href="projects.html" class="navlink">Projects   |</a>
+	<a href="about.html" class="navlink">About   |</a>
 	<a href="contact.html" class="navlink">Contact</a>
 </nav>
 </header>
